# Agentic-Bug-Hunter

./: .gitignore  README.md
agentic_bug_hunter/: .gitignore  FRONTEND_IMPLEMENTATION_PROMPT.md  README.md  api.py  config.py  main.py  requirements.txt
agentic_bug_hunter/agents/: dataset_agent.py  explanation_agent.py  llm_bug_agent.py  retrieval_agent.py
agentic_bug_hunter/data/: agentic_bug_hunter_samples.csv  bug_report_1.csv
agentic_bug_hunter/frontend/: app.js  index.html  styles.css
agentic_bug_hunter/llm/: client.py
agentic_bug_hunter/utils/: csv_writer.py
server/: .gitignore  README.md  client_test.py  mcp_server.py  pyproject.toml  requirements.txt
server/docs/: ARCHITECTURE.md  README.md
server/scripts/: run_client.ps1  run_server.ps1
server/src/infineon_mcp_server/: __main__.py  app.py
server/src/infineon_mcp_server/tools/: __init__.py  fs_tools.py  math_tools.py  retrieval_tools.py
server/tests/: README.md
